Fixed bugs: user agent identification and settings page mockup button text

--- a/languages/add-whatsapp-button-he_IL.po
+++ b/languages/add-whatsapp-button-he_IL.po
@@ -114,7 +114,7 @@ msgstr ""
 
 #: includes/awb-settings.php:153
 msgid "Breakpoint"
-msgstr "נקודת שבירה"
+msgstr "התאמה לניידים"
 
 #: includes/awb-settings.php:156
 msgid ""
